--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 Project
 
-This is the README for the fake project.
+This is the README for the fake project repository.
 
-
-2015-08-04
+2015-08-07.
